--- a/site/views/index.ejs
+++ b/site/views/index.ejs
@@ -28,10 +28,96 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/img/flyerConsolas.jpg" class="d-block w-100 h-100" alt="flyer consolas">
+                    <img src="/img/flyerConsolas.jpg" class="d-block w-100" alt="flyer consolas">
                     <div class="carousel-caption d-none">
                         <h5>¿Tenés consola?</h5>
                         <p>¡No nos olvidamos de vos!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div>
+            <div class="row vistaProductos mx-0 py-2">
+                <h2 class="col-12">Podría interesarte</h2>
+                <div class="card col-5">
+                    <img src="/img/intelCeleron.jpg" class="card-img-top" alt="intel celeron">
+                    <div class="card-body p-0">
+                        <h5 class="card-title">Lorem, ipsum dolor.</h5>
+                        <a href="#" class="btn">$PRECIO</a>
+                    </div>
+                </div>
+                <div class="card col-5">
+                    <img src="/img/intelCeleron.jpg" class="card-img-top" alt="intel celeron">
+                    <div class="card-body p-0">
+                        <h5 class="card-title">Lorem, ipsum dolor.</h5>
+                        <a href="#" class="btn">$PRECIO</a>
+                    </div>
+                </div>
+                <div class="card col-5 tarjetaAncha d-none">
+                    <img src="/img/intelCeleron.jpg" class="card-img-top" alt="intel celeron">
+                    <div class="card-body p-0">
+                        <h5 class="card-title">Lorem, ipsum dolor.</h5>
+                        <a href="#" class="btn">$PRECIO</a>
+                    </div>
+                </div>
+                <div class="card col-5 tarjetaAncha d-none">
+                    <img src="/img/intelCeleron.jpg" class="card-img-top" alt="intel celeron">
+                    <div class="card-body p-0">
+                        <h5 class="card-title">Lorem, ipsum dolor.</h5>
+                        <a href="#" class="btn">$PRECIO</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row seccionCategorias m-0 p-2">
+            <h3 class="col-12">¿Qué estás buscando?</h3>
+            <div class="col-2 p-0">
+                <i class="fas fa-laptop"></i>
+                <p>Notes</p>
+            </div>
+            <div class="col-2 p-0">
+                <i class="fas fa-gamepad"></i>
+                <p>Consolas</p>
+            </div>
+            <div class="col-2 p-0">
+                <i class="fas fa-memory"></i>
+                <p>RAM</p>
+            </div>
+            <div class="col-2 p-0">
+                <i class="fas fa-list"></i>
+                <p>Todo</p>
+            </div>
+        </div>
+
+        <div>
+            <div class="row vistaProductos mx-0 py-2">
+                <h2 class="col-12">Basado en tus visitas</h2>
+                <div class="card col-5">
+                    <img src="/img/intelCeleron.jpg" class="card-img-top" alt="intel celeron">
+                    <div class="card-body p-0">
+                        <h5 class="card-title">Lorem, ipsum dolor.</h5>
+                        <a href="#" class="btn">$PRECIO</a>
+                    </div>
+                </div>
+                <div class="card col-5">
+                    <img src="/img/intelCeleron.jpg" class="card-img-top" alt="intel celeron">
+                    <div class="card-body p-0">
+                        <h5 class="card-title">Lorem, ipsum dolor.</h5>
+                        <a href="#" class="btn">$PRECIO</a>
+                    </div>
+                </div>
+                <div class="card col-5 tarjetaAncha d-none">
+                    <img src="/img/intelCeleron.jpg" class="card-img-top" alt="intel celeron">
+                    <div class="card-body p-0">
+                        <h5 class="card-title">Lorem, ipsum dolor.</h5>
+                        <a href="#" class="btn">$PRECIO</a>
+                    </div>
+                </div>
+                <div class="card col-5 tarjetaAncha d-none">
+                    <img src="/img/intelCeleron.jpg" class="card-img-top" alt="intel celeron">
+                    <div class="card-body p-0">
+                        <h5 class="card-title">Lorem, ipsum dolor.</h5>
+                        <a href="#" class="btn">$PRECIO</a>
                     </div>
                 </div>
             </div>
