--- a/site/views/partials/header.ejs
+++ b/site/views/partials/header.ejs
@@ -66,5 +66,7 @@
             <i class="fas fa-times fa-lg"></i>
         </button>
     </div>
+    <div class="col-12 rgb">
 
+    </div>
 </header>
