--- a/site/views/index.ejs
+++ b/site/views/index.ejs
@@ -1,4 +1,4 @@
-<html>
+<html lang="es">
 <!-- partial del head -->
 <%- include(`./partials/head.ejs`) %>
 
@@ -23,7 +23,7 @@
                 <div class="carousel-item">
                     <img src="/img/flyerIntel10.jpg" class="d-block w-100" alt="flyer Intel">
                     <div class="carousel-caption d-none">
-                        <h5>La potencia de la 10ma gen.</h5>
+                        <h5>La potencia de la 10</h5>
                         <p>Lorem ipsum dolor sit amet.</p>
                     </div>
                 </div>
@@ -36,34 +36,37 @@
                 </div>
             </div>
         </div>
+        <div class="bienvenidx">
+            <h3 class="col-12">Bienvenidx (nombre)</h3>
+        </div>
         <div>
             <div class="row vistaProductos mx-0 py-2">
                 <h2 class="col-12">Podría interesarte</h2>
                 <div class="card col-5">
                     <img src="/img/intelCeleron.jpg" class="card-img-top" alt="intel celeron">
                     <div class="card-body p-0">
-                        <h5 class="card-title">Lorem, ipsum dolor.</h5>
+                        <h5 class="card-title">Lorem</h5>
                         <a href="#" class="btn">$PRECIO</a>
                     </div>
                 </div>
                 <div class="card col-5">
                     <img src="/img/intelCeleron.jpg" class="card-img-top" alt="intel celeron">
                     <div class="card-body p-0">
-                        <h5 class="card-title">Lorem, ipsum dolor.</h5>
+                        <h5 class="card-title">Lorem</h5>
                         <a href="#" class="btn">$PRECIO</a>
                     </div>
                 </div>
-                <div class="card col-5 tarjetaAncha d-none">
+                <div class="card col-5 movilH d-none">
                     <img src="/img/intelCeleron.jpg" class="card-img-top" alt="intel celeron">
                     <div class="card-body p-0">
-                        <h5 class="card-title">Lorem, ipsum dolor.</h5>
+                        <h5 class="card-title">Lorem</h5>
                         <a href="#" class="btn">$PRECIO</a>
                     </div>
                 </div>
-                <div class="card col-5 tarjetaAncha d-none">
+                <div class="card col-5 tabletH d-none">
                     <img src="/img/intelCeleron.jpg" class="card-img-top" alt="intel celeron">
                     <div class="card-body p-0">
-                        <h5 class="card-title">Lorem, ipsum dolor.</h5>
+                        <h5 class="card-title">Lorem</h5>
                         <a href="#" class="btn">$PRECIO</a>
                     </div>
                 </div>
@@ -83,6 +86,10 @@
                 <i class="fas fa-memory"></i>
                 <p>RAM</p>
             </div>
+            <div class="col-2 p-0 d-none">
+                <i class="fas fa-headphones"></i>
+                <p>Audio</p>
+            </div>
             <div class="col-2 p-0">
                 <i class="fas fa-list"></i>
                 <p>Todo</p>
@@ -95,28 +102,28 @@
                 <div class="card col-5">
                     <img src="/img/intelCeleron.jpg" class="card-img-top" alt="intel celeron">
                     <div class="card-body p-0">
-                        <h5 class="card-title">Lorem, ipsum dolor.</h5>
+                        <h5 class="card-title">Lorem</h5>
                         <a href="#" class="btn">$PRECIO</a>
                     </div>
                 </div>
                 <div class="card col-5">
                     <img src="/img/intelCeleron.jpg" class="card-img-top" alt="intel celeron">
                     <div class="card-body p-0">
-                        <h5 class="card-title">Lorem, ipsum dolor.</h5>
+                        <h5 class="card-title">Lorem</h5>
                         <a href="#" class="btn">$PRECIO</a>
                     </div>
                 </div>
-                <div class="card col-5 tarjetaAncha d-none">
+                <div class="card col-5 movilH d-none">
                     <img src="/img/intelCeleron.jpg" class="card-img-top" alt="intel celeron">
                     <div class="card-body p-0">
-                        <h5 class="card-title">Lorem, ipsum dolor.</h5>
+                        <h5 class="card-title">Lorem</h5>
                         <a href="#" class="btn">$PRECIO</a>
                     </div>
                 </div>
-                <div class="card col-5 tarjetaAncha d-none">
+                <div class="card col-5 tabletH d-none">
                     <img src="/img/intelCeleron.jpg" class="card-img-top" alt="intel celeron">
                     <div class="card-body p-0">
-                        <h5 class="card-title">Lorem, ipsum dolor.</h5>
+                        <h5 class="card-title">Lorem</h5>
                         <a href="#" class="btn">$PRECIO</a>
                     </div>
                 </div>
