--- a/site/views/partials/head.ejs
+++ b/site/views/partials/head.ejs
@@ -1,4 +1,5 @@
 <head>
+    
     <!-- Metas -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,9 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" />
 
     <!-- Archivos CSS Personalizados -->
-    <link rel="stylesheet" href="/css/index.css">
-    <link rel="stylesheet" href="/css/header.css">
-    <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/estilos.css">
 
     <link rel="icon" type="image/png" href="/img/favicon.png">
     <title>ONBOARD</title>
