--- a/site/views/index.ejs
+++ b/site/views/index.ejs
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="es">
 <!-- partial del head -->
 <%- include(`./partials/head.ejs`) %>
@@ -36,47 +37,56 @@
                 </div>
             </div>
         </div>
-        <div class="bienvenidx">
-            <h3 class="col-12">Bienvenidx (nombre)</h3>
+        <div class="bienvenidx row mx-0 py-2">
+            <h3 class="col-12 mb-0">Bienvenidx (nombre)</h3>
         </div>
-        <div>
             <div class="row vistaProductos mx-0 py-2">
-                <h2 class="col-12">Podría interesarte</h2>
+                <h3 class="col-12">Podría interesarte</h3>
                 <div class="card col-5">
                     <img src="/img/intelCeleron.jpg" class="card-img-top" alt="intel celeron">
-                    <div class="card-body p-0">
+                    <div class="card-body mx-0 p-0">
                         <h5 class="card-title">Lorem</h5>
                         <a href="#" class="btn">$PRECIO</a>
                     </div>
                 </div>
                 <div class="card col-5">
                     <img src="/img/intelCeleron.jpg" class="card-img-top" alt="intel celeron">
-                    <div class="card-body p-0">
+                    <div class="card-body mx-0 p-0">
                         <h5 class="card-title">Lorem</h5>
                         <a href="#" class="btn">$PRECIO</a>
                     </div>
                 </div>
                 <div class="card col-5 movilH d-none">
                     <img src="/img/intelCeleron.jpg" class="card-img-top" alt="intel celeron">
-                    <div class="card-body p-0">
+                    <div class="card-body mx-0 p-0">
                         <h5 class="card-title">Lorem</h5>
                         <a href="#" class="btn">$PRECIO</a>
                     </div>
                 </div>
                 <div class="card col-5 tabletH d-none">
                     <img src="/img/intelCeleron.jpg" class="card-img-top" alt="intel celeron">
-                    <div class="card-body p-0">
+                    <div class="card-body mx-0 p-0">
+                        <h5 class="card-title">Lorem</h5>
+                        <a href="#" class="btn">$PRECIO</a>
+                    </div>
+                </div>
+                <div class="card col-5 pAncha d-none">
+                    <img src="/img/intelCeleron.jpg" class="card-img-top" alt="intel celeron">
+                    <div class="card-body mx-0 p-0">
                         <h5 class="card-title">Lorem</h5>
                         <a href="#" class="btn">$PRECIO</a>
                     </div>
                 </div>
             </div>
-        </div>
         <div class="row seccionCategorias m-0 p-2">
-            <h3 class="col-12">¿Qué estás buscando?</h3>
+            <h3 class="col-12">¿Qué buscas?</h3>
             <div class="col-2 p-0">
                 <i class="fas fa-laptop"></i>
                 <p>Notes</p>
+            </div>
+            <div class="col-2 p-0 d-none catPA">
+                <i class="fas fa-desktop"></i>
+                <p>PC armadas</p>
             </div>
             <div class="col-2 p-0">
                 <i class="fas fa-gamepad"></i>
@@ -84,11 +94,27 @@
             </div>
             <div class="col-2 p-0">
                 <i class="fas fa-memory"></i>
-                <p>RAM</p>
+                <p>Memorias RAM</p>
             </div>
-            <div class="col-2 p-0 d-none">
+            <div class="col-2 p-0 d-none catM">
                 <i class="fas fa-headphones"></i>
                 <p>Audio</p>
+            </div>
+            <div class="col-2 p-0 d-none catT">
+                <i class="fas fa-mouse"></i>
+                <p>Mouse</p>
+            </div>
+            <div class="col-2 p-0 d-none catPA">
+                <i class="fas fa-keyboard"></i>
+                <p>Teclados</p>
+            </div>
+            <div class="col-2 p-0 d-none catPA">
+                <i class="fas fa-microchip"></i>
+                <p>Procesadores</p>
+            </div>
+            <div class="col-2 p-0 d-none catPA">
+                <i class="fas fa-hdd"></i>
+                <p>Almacenamiento</p>
             </div>
             <div class="col-2 p-0">
                 <i class="fas fa-list"></i>
@@ -98,31 +124,38 @@
 
         <div>
             <div class="row vistaProductos mx-0 py-2">
-                <h2 class="col-12">Basado en tus visitas</h2>
+                <h3 class="col-12">Basado en tus visitas</h3>
                 <div class="card col-5">
                     <img src="/img/intelCeleron.jpg" class="card-img-top" alt="intel celeron">
-                    <div class="card-body p-0">
+                    <div class="card-body mx-0 p-0">
                         <h5 class="card-title">Lorem</h5>
                         <a href="#" class="btn">$PRECIO</a>
                     </div>
                 </div>
                 <div class="card col-5">
                     <img src="/img/intelCeleron.jpg" class="card-img-top" alt="intel celeron">
-                    <div class="card-body p-0">
+                    <div class="card-body mx-0 p-0">
                         <h5 class="card-title">Lorem</h5>
                         <a href="#" class="btn">$PRECIO</a>
                     </div>
                 </div>
                 <div class="card col-5 movilH d-none">
                     <img src="/img/intelCeleron.jpg" class="card-img-top" alt="intel celeron">
-                    <div class="card-body p-0">
+                    <div class="card-body mx-0 p-0">
                         <h5 class="card-title">Lorem</h5>
                         <a href="#" class="btn">$PRECIO</a>
                     </div>
                 </div>
                 <div class="card col-5 tabletH d-none">
                     <img src="/img/intelCeleron.jpg" class="card-img-top" alt="intel celeron">
-                    <div class="card-body p-0">
+                    <div class="card-body mx-0 p-0">
+                        <h5 class="card-title">Lorem</h5>
+                        <a href="#" class="btn">$PRECIO</a>
+                    </div>
+                </div>
+                <div class="card col-5 pAncha d-none">
+                    <img src="/img/intelCeleron.jpg" class="card-img-top" alt="intel celeron">
+                    <div class="card-body mx-0 p-0">
                         <h5 class="card-title">Lorem</h5>
                         <a href="#" class="btn">$PRECIO</a>
                     </div>
@@ -141,3 +174,4 @@
 </body>
 
 </html>
+
