Terminado detalleProducto - Carrito versión movil incompleta.

--- a/site/public/css/header.css
+++ b/site/public/css/header.css
@@ -50,7 +50,7 @@ header.container-fluid{
 /* BARRA DE BÚSQUEDA */
 .navbar form{
     border-radius: 4px;
-    background: #DCDCDC;
+    background: var(--color-gris);
 }
 .navbar .form-control:focus{
     box-shadow: none;
