--- a/site/public/css/estilos.css
+++ b/site/public/css/estilos.css
@@ -1,6 +1,7 @@
 @import url('header.css');
 @import url('index.css');
 @import url('footer.css');
+@import url('productDetail.css');
 
 :root{
     --color-naranja: #F58220;
