--- a/site/views/index.ejs
+++ b/site/views/index.ejs
@@ -37,10 +37,10 @@
                 </div>
             </div>
         </div>
-        <div class="bienvenidx row mx-0 py-2">
+        <div class="bienvenidx row mx-0 py-2 mainCard">
             <h3 class="col-12 mb-0">Bienvenidx (nombre)</h3>
         </div>
-            <div class="row vistaProductos mx-0 py-2">
+            <div class="row vistaProductos mx-0 py-2 mainCard">
                 <h3 class="col-12">Podría interesarte</h3>
                 <div class="card col-5">
                     <img src="/img/intelCeleron.jpg" class="card-img-top" alt="intel celeron">
@@ -78,7 +78,7 @@
                     </div>
                 </div>
             </div>
-        <div class="row seccionCategorias m-0 p-2">
+        <div class="row seccionCategorias m-0 p-2 mainCard">
             <h3 class="col-12">¿Qué buscas?</h3>
             <div class="col-2 p-0">
                 <i class="fas fa-laptop"></i>
@@ -123,7 +123,7 @@
         </div>
 
         <div>
-            <div class="row vistaProductos mx-0 py-2">
+            <div class="row vistaProductos mx-0 py-2 mainCard">
                 <h3 class="col-12">Basado en tus visitas</h3>
                 <div class="card col-5">
                     <img src="/img/intelCeleron.jpg" class="card-img-top" alt="intel celeron">
