--- a/site/views/productDetail.ejs
+++ b/site/views/productDetail.ejs
@@ -1,11 +1,99 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+<html lang="es">
+<!-- Partial del head -->
+<%- include(`./partials/head.ejs`) %>
+
 <body>
-    <h1>ME FUI A CAGAR Y COMER</h1>
+
+    <!-- Partial del header -->
+    <%- include(`./partials/header.ejs`) %>
+
+    <!-- Cuerpo del productDetail (pegar debajo)-->
+    <main class="container-fluid px-0">
+        <div class="row detalle1 mx-0 py-2 mainCard">
+            <span class="migajas px-0 m-0">Home > Cat > Sub-cat > id</span>
+                <span class="migajas px-0 m-0">Marca</span>
+            <div class="card col-11 product">
+                <img src="/img/intelCeleron.jpg" alt="imagen producto" class="card-img-top col-11 productImg">
+                <div class="card-body mx-0 p-0 money">
+                    <h3 class="card-title">Lorem, ipsum dolor.</h3>
+                    <h2 class="card-title precio">$PRECIO</h2>
+                    <form class="row carroProducto">
+                        <label for="">Cantidad</label>
+                        <input type="text" placeholder="1">
+                        <button class="btn">
+                            <i class="fas fa-shopping-cart"></i> Agregar
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="row mx-0 py-2 mainCard mt-2">
+            <div class="card col-11">
+                <ul class="nav nav-tabs" id="detalles" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link active" id="tecnicos-tab" data-toggle="tab" href="#tecnicos" role="tab"
+                            aria-controls="tecnicos" aria-selected="true">Detalles</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="comentarios-tab" data-toggle="tab" href="#comentarios" role="tab"
+                            aria-controls="comentarios" aria-selected="false">Comentarios</a>
+                    </li>
+                </ul>
+                <div class="tab-content" id="detallesContent">
+                    <div class="tab-pane fade show active" id="tecnicos" role="tabpanel" aria-labelledby="tecnicos-tab">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, necessitatibus?</div>
+                    <div class="tab-pane fade" id="comentarios" role="tabpanel" aria-labelledby="comentarios-tab">Lorem
+                        ipsum dolor, sit amet consectetur adipisicing elit. Possimus, maxime!</div>
+                </div>
+            </div>
+        </div>
+        <div class="row vistaProductos mx-0 py-2 mainCard">
+            <h3 class="col-12">Productos relacionados</h3>
+            <div class="card col-5">
+                <img src="/img/intelCeleron.jpg" class="card-img-top" alt="intel celeron">
+                <div class="card-body mx-0 p-0">
+                    <h5 class="card-title">Lorem</h5>
+                    <a href="#" class="btn">$PRECIO</a>
+                </div>
+            </div>
+            <div class="card col-5">
+                <img src="/img/intelCeleron.jpg" class="card-img-top" alt="intel celeron">
+                <div class="card-body mx-0 p-0">
+                    <h5 class="card-title">Lorem</h5>
+                    <a href="#" class="btn">$PRECIO</a>
+                </div>
+            </div>
+            <div class="card col-5 movilH d-none">
+                <img src="/img/intelCeleron.jpg" class="card-img-top" alt="intel celeron">
+                <div class="card-body mx-0 p-0">
+                    <h5 class="card-title">Lorem</h5>
+                    <a href="#" class="btn">$PRECIO</a>
+                </div>
+            </div>
+            <div class="card col-5 tabletH d-none">
+                <img src="/img/intelCeleron.jpg" class="card-img-top" alt="intel celeron">
+                <div class="card-body mx-0 p-0">
+                    <h5 class="card-title">Lorem</h5>
+                    <a href="#" class="btn">$PRECIO</a>
+                </div>
+            </div>
+            <div class="card col-5 pAncha d-none">
+                <img src="/img/intelCeleron.jpg" class="card-img-top" alt="intel celeron">
+                <div class="card-body mx-0 p-0">
+                    <h5 class="card-title">Lorem</h5>
+                    <a href="#" class="btn">$PRECIO</a>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <!-- Partial del footer -->
+    <%- include(`./partials/footer.ejs`) %>
+
+    <!-- Partial de scripts -->
+    <%- include(`./partials/scripts.ejs`) %>
+
 </body>
+
 </html>
