--- a/sitio/puntos de vista/register.ejs
+++ b/sitio/puntos de vista/register.ejs
@@ -9,8 +9,6 @@
     <%- include(`./partials/header.ejs`) %>
 
     <!-- Cuerpo del register (pegar debajo)-->
-    <!DOCTYPE html>
-<html lang="es">
 <header>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,10 +32,7 @@
   
 </form>
 </div>
-</body>
-</html>
-<!--"form-register"-->
-
+<!--formulario de registo-->
 
 
     <!-- Partial del footer -->
