creado products y su vista. falta categorias

--- a/site/views/products.ejs
+++ b/site/views/products.ejs
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    Prueba de products.ejs
-</body>
+<html lang="es">
+  <!-- Partial del head --><%- include(`./partials/head.ejs`) %>
+  <body>
+    <!-- Partial del header -->
+    <%- include(`./partials/header.ejs`) %>
+
+
+    
+
+
+
+    <!-- Partial del footer -->
+    <%-include(`./partials/footer.ejs`) %>
+
+    <!-- Partial de scripts -->
+    <%-include(`./partials/scripts.ejs`) %>
+  </body>
 </html>
