--- a/site/public/css/estilos.css
+++ b/site/public/css/estilos.css
@@ -2,6 +2,7 @@
 @import url('index.css');
 @import url('footer.css');
 @import url('productDetail.css');
+@import url('register.css');
 
 :root{
     --color-naranja: #F58220;
