--- a/site/views/partials/header.ejs
+++ b/site/views/partials/header.ejs
@@ -4,7 +4,7 @@
     <nav class="row navbar m-0 px-0">
 
         <!-- Logo -->
-        <a href="#" class="navbar-brand col-2 px-0 mr-0">
+        <a href="/" class="navbar-brand col-2 px-0 mr-0">
             <img class="img-responsive p-0 logoS" src="/img/logo-s.png" alt="logoMobile" height="40">
             <img class="img-responsive p-0 logoL" src="/img/logo.png" alt="logoLarge" height="50">
         </a>
