--- a/site/views/productDetail.ejs
+++ b/site/views/productDetail.ejs
@@ -14,14 +14,14 @@
             <span class="migajas px-0 m-0">Home > Cat > Sub-cat > id</span>
                 <span class="migajas px-0 m-0">Marca</span>
             <div class="card col-11 product">
-                <img src="/img/intelCeleron.jpg" alt="imagen producto" class="card-img-top col-11 productImg">
+                <img src="/img/intelCeleron.jpg" alt="imagen producto" class="card-img-top productImg">
                 <div class="card-body mx-0 p-0 money">
                     <h3 class="card-title">Lorem, ipsum dolor.</h3>
                     <h2 class="card-title precio">$PRECIO</h2>
                     <form class="row carroProducto">
-                        <label for="">Cantidad</label>
-                        <input type="text" placeholder="1">
-                        <button class="btn">
+                        <label for="" class="col-5 m-0"><span class="btn disabled">Cantidad</span></label>
+                        <input type="text" placeholder="1" name="cantidad" class="col-2">
+                        <button type="submit" class="btn col-5">
                             <i class="fas fa-shopping-cart"></i> Agregar
                         </button>
                     </form>
