--- a/site/views/partials/header.ejs
+++ b/site/views/partials/header.ejs
@@ -52,7 +52,9 @@
                 <li class="nav-item col-6">
                     <i class="far fa-list-alt col-2 p-0"></i>
                     <br>
-                    <span class="col-10 p-0">CATEGORÍAS</span>
+                    <span class="col-10 p-0">
+                        <a href="/cat" id="catHeader">CATEGORIAS</a>
+                    </span>
                 </li>
             </div>
         </ul>
