--- a/site/public/css/estilos.css
+++ b/site/public/css/estilos.css
@@ -3,6 +3,7 @@
 @import url('footer.css');
 @import url('productDetail.css');
 @import url('register.css');
+@import url('categorias.css');
 
 :root{
     --color-naranja: #F58220;
