--- a/site/views/products.ejs
+++ b/site/views/products.ejs
@@ -1,19 +1,128 @@
 <!DOCTYPE html>
 <html lang="es">
-  <!-- Partial del head --><%- include(`./partials/head.ejs`) %>
+  <!-- Partial del head -->
+  <%- include(`./partials/head.ejs`) %>
+  <head>
+    <link rel="stylesheet" href="css/products.css" />
+  </head>
+
   <body>
     <!-- Partial del header -->
-    <%- include(`./partials/header.ejs`) %>
+    <%- include(`./partials/header.ejs`)%>
 
+    <div class="container-fluid">
+      <div class="row">
+        <!-- DIV de la barra lateral con las categorias -->
+        <div class="row col-3 col_cat">
+          <div class="card col-12">
+            <div>
+              <h4>Categoria #1</h4>
+            </div>
+            <div>
+              <h4>Categoria #2</h4>
+            </div>
+            <div>
+              <h4>Categoria #3</h4>
+            </div>
+            <div>
+              <h4>Categoria #4</h4>
+            </div>
+            <div>
+              <h4>Categoria #5</h4>
+            </div>
+          </div>
+        </div>
 
-    
+        <!-- DIV con los productos -->
+        <div class="row col-9 col_prod">
+          <div class="card col-4 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+            <img
+              src="/img/intelCeleron.jpg"
+              class="card-img-top"
+              alt="intel celeron"
+            />
+            <div class="card-body mx-0 p-0">
+              <h5 class="card-title">Lorem</h5>
+              <a href="#" class="btn">$PRECIO</a>
+            </div>
+          </div>
 
+          <div class="card col-4 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+            <img
+              src="/img/intelCeleron.jpg"
+              class="card-img-top"
+              alt="intel celeron"
+            />
+            <div class="card-body mx-0 p-0">
+              <h5 class="card-title">Lorem</h5>
+              <a href="#" class="btn">$PRECIO</a>
+            </div>
+          </div>
 
+          <div class="card col-4 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+            <img
+              src="/img/intelCeleron.jpg"
+              class="card-img-top"
+              alt="intel celeron"
+            />
+            <div class="card-body mx-0 p-0">
+              <h5 class="card-title">Lorem</h5>
+              <a href="#" class="btn">$PRECIO</a>
+            </div>
+          </div>
+
+          <div class="card col-4 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+            <img
+              src="/img/intelCeleron.jpg"
+              class="card-img-top"
+              alt="intel celeron"
+            />
+            <div class="card-body mx-0 p-0">
+              <h5 class="card-title">Lorem</h5>
+              <a href="#" class="btn">$PRECIO</a>
+            </div>
+          </div>
+
+          <div class="card col-4 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+            <img
+              src="/img/intelCeleron.jpg"
+              class="card-img-top"
+              alt="intel celeron"
+            />
+            <div class="card-body mx-0 p-0">
+              <h5 class="card-title">Lorem</h5>
+              <a href="#" class="btn">$PRECIO</a>
+            </div>
+          </div>
+
+          <div class="card col-4 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+            <img
+              src="/img/intelCeleron.jpg"
+              class="card-img-top"
+              alt="intel celeron"
+            />
+            <div class="card-body mx-0 p-0">
+              <h5 class="card-title">Lorem</h5>
+              <a href="#" class="btn">$PRECIO</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Partial del footer -->
     <%-include(`./partials/footer.ejs`) %>
 
     <!-- Partial de scripts -->
-    <%-include(`./partials/scripts.ejs`) %>
+    <%-include(`./partials/scripts.ejs`)%>
   </body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body></body>
 </html>
