--- a/site/views/products.ejs
+++ b/site/views/products.ejs
@@ -16,19 +16,31 @@
         <div class="row col-3 col_cat">
           <div class="card col-12">
             <div>
-              <h4>Categoria #1</h4>
+              <h4>Notes</h4>
             </div>
             <div>
-              <h4>Categoria #2</h4>
+              <h4>PC armadas</h4>
             </div>
             <div>
-              <h4>Categoria #3</h4>
+              <h4>Consolas</h4>
             </div>
             <div>
-              <h4>Categoria #4</h4>
+              <h4>Memorias RAM</h4>
             </div>
             <div>
-              <h4>Categoria #5</h4>
+              <h4>Audio</h4>
+            </div>            
+            <div>
+              <h4>Mouse</h4>
+            </div>
+            <div>
+              <h4>Teclados</h4>
+            </div>
+            <div>
+              <h4>Procesadores</h4>
+            </div>
+            <div>
+              <h4>Almacenamiento</h4>
             </div>
           </div>
         </div>
@@ -116,13 +128,4 @@
     <!-- Partial de scripts -->
     <%-include(`./partials/scripts.ejs`)%>
   </body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body></body>
 </html>
