--- a/site/views/partials/header.ejs
+++ b/site/views/partials/header.ejs
@@ -12,7 +12,7 @@
         <!-- Barra de búsqueda -->
         <form action="" class="row col-8 m-0 p-0">
             <input class="form-control col-10" type="text" placeholder="Buscá un producto" aria-label="Búsqueda">
-            <button class="col-2 p-0 busqueda">
+            <button class="col-2 p-0 busqueda" type="submit">
                 <i class="fas fa-search p-1 fa-md"></i>
             </button>
         </form>
@@ -25,8 +25,8 @@
 
         <!-- Íconos de registro/inicio y carrito -->
         <div class="d-none col-2 tabletIconos">
-            <i class="fas fa-user fa-lg"></i>
-            <i class="fas fa-shopping-cart fa-lg"></i>
+            <a href="/user/login"><i class="fas fa-user fa-lg"></i></a>
+            <a href="#"><i class="fas fa-shopping-cart fa-lg"></i></a>
         </div>
     </nav>
 
@@ -53,15 +53,15 @@
                     <i class="far fa-list-alt col-2 p-0"></i>
                     <br>
                     <span class="col-10 p-0">
-                        <a href="/cat" id="catHeader">CATEGORIAS</a>
+                        <a href="/prod/cat" id="catHeader">CATEGORIAS</a>
                     </span>
                 </li>
             </div>
         </ul>
         <ul class="navbar-nav pr-0 col-2 my-1 iconos">
-            <li class="nav-item"><i class="fas fa-user fa-lg"></i></li>
+            <li class="nav-item"><a href="/user/login"><i class="fas fa-user fa-lg"></i></a></li>
             <hr>
-            <li class="nav-item"><i class="fas fa-shopping-cart fa-lg"></i></li>
+            <li class="nav-item"><a href="#"><i class="fas fa-shopping-cart fa-lg"></i></a></li>
         </ul>
         <button type="button" class="navbar-toggler col-2 px-0 menu cierre" data-toggle="collapse"
             data-target="#menuPrincipal" aria-controls="menuPrincipal" aria-expanded="true" aria-label="Menú pincipal">
