--- a/site/views/productDetail.ejs
+++ b/site/views/productDetail.ejs
@@ -12,18 +12,22 @@
     <main class="container-fluid px-0">
         <div class="row detalle1 mx-0 py-2 mainCard">
             <span class="migajas px-0 m-0">Home > Cat > Sub-cat > id</span>
-                <span class="migajas px-0 m-0">Marca</span>
+            <span class="migajas px-0 m-0">Marca</span>
             <div class="card col-11 product">
                 <img src="/img/intelCeleron.jpg" alt="imagen producto" class="card-img-top productImg">
                 <div class="card-body mx-0 p-0 money">
-                    <h3 class="card-title">Lorem, ipsum dolor.</h3>
-                    <h2 class="card-title precio">$PRECIO</h2>
+                    <h3 class="card-title"><%- producto.marca %> <%- producto.modelo %></h3>
+                    <h2 class="card-title precio">$<%- producto.precio %></h2>
                     <form class="row carroProducto">
                         <label for="" class="col-5 m-0"><span class="btn disabled">Cantidad</span></label>
                         <input type="text" placeholder="1" name="cantidad" class="col-2">
                         <button type="submit" class="btn col-5">
                             <i class="fas fa-shopping-cart"></i> Agregar
                         </button>
+                    </form>
+                    <a href="/prod/<%- producto.id %>/edit" class="btn">Editar</a>
+                    <form action="/prod/:id/delete?_method=DELETE" method="POST">
+                        <input type="submit" value="DELETE" class="btn">
                     </form>
                 </div>
             </div>
