--- a/site/views/products.ejs
+++ b/site/views/products.ejs
@@ -13,8 +13,8 @@
     <div class="container-fluid">
       <div class="row">
         <!-- DIV de la barra lateral con las categorias -->
-        <div class="row col-3 col_cat">
-          <div class="card col-12">
+        <div class="row col-3">
+          <div class="card col-12 col_cat">
             <div>
               <h4>Notes</h4>
             </div>
@@ -29,7 +29,7 @@
             </div>
             <div>
               <h4>Audio</h4>
-            </div>            
+            </div>
             <div>
               <h4>Mouse</h4>
             </div>
@@ -47,77 +47,78 @@
 
         <!-- DIV con los productos -->
         <div class="row col-9 col_prod">
-          <div class="card col-4 col-sm-6 col-md-4 col-lg-4 col-xl-3">
-            <img
-              src="/img/intelCeleron.jpg"
-              class="card-img-top"
-              alt="intel celeron"
-            />
-            <div class="card-body mx-0 p-0">
-              <h5 class="card-title">Lorem</h5>
-              <a href="#" class="btn">$PRECIO</a>
+            <div class="card col-4 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+              <img
+                src="/img/intelCeleron.jpg"
+                class="card-img-top"
+                alt="intel celeron"
+              />
+              <div class="card-body mx-0 p-0">
+                <h5 class="card-title">Lorem</h5>
+                <a href="#" class="btn">$PRECIO</a>
+              </div>
             </div>
-          </div>
 
-          <div class="card col-4 col-sm-6 col-md-4 col-lg-4 col-xl-3">
-            <img
-              src="/img/intelCeleron.jpg"
-              class="card-img-top"
-              alt="intel celeron"
-            />
-            <div class="card-body mx-0 p-0">
-              <h5 class="card-title">Lorem</h5>
-              <a href="#" class="btn">$PRECIO</a>
+            <div class="card col-4 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+              <img
+                src="/img/intelCeleron.jpg"
+                class="card-img-top"
+                alt="intel celeron"
+              />
+              <div class="card-body mx-0 p-0">
+                <h5 class="card-title">Lorem</h5>
+                <a href="#" class="btn">$PRECIO</a>
+              </div>
             </div>
-          </div>
 
-          <div class="card col-4 col-sm-6 col-md-4 col-lg-4 col-xl-3">
-            <img
-              src="/img/intelCeleron.jpg"
-              class="card-img-top"
-              alt="intel celeron"
-            />
-            <div class="card-body mx-0 p-0">
-              <h5 class="card-title">Lorem</h5>
-              <a href="#" class="btn">$PRECIO</a>
+            <div class="card col-4 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+              <img
+                src="/img/intelCeleron.jpg"
+                class="card-img-top"
+                alt="intel celeron"
+              />
+              <div class="card-body mx-0 p-0">
+                <h5 class="card-title">Lorem</h5>
+                <a href="#" class="btn">$PRECIO</a>
+              </div>
             </div>
-          </div>
 
-          <div class="card col-4 col-sm-6 col-md-4 col-lg-4 col-xl-3">
-            <img
-              src="/img/intelCeleron.jpg"
-              class="card-img-top"
-              alt="intel celeron"
-            />
-            <div class="card-body mx-0 p-0">
-              <h5 class="card-title">Lorem</h5>
-              <a href="#" class="btn">$PRECIO</a>
+            <div class="card col-4 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+              <img
+                src="/img/intelCeleron.jpg"
+                class="card-img-top"
+                alt="intel celeron"
+              />
+              <div class="card-body mx-0 p-0">
+                <h5 class="card-title">Lorem</h5>
+                <a href="#" class="btn">$PRECIO</a>
+              </div>
             </div>
-          </div>
 
-          <div class="card col-4 col-sm-6 col-md-4 col-lg-4 col-xl-3">
-            <img
-              src="/img/intelCeleron.jpg"
-              class="card-img-top"
-              alt="intel celeron"
-            />
-            <div class="card-body mx-0 p-0">
-              <h5 class="card-title">Lorem</h5>
-              <a href="#" class="btn">$PRECIO</a>
+            <div class="card col-4 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+              <img
+                src="/img/intelCeleron.jpg"
+                class="card-img-top"
+                alt="intel celeron"
+              />
+              <div class="card-body mx-0 p-0">
+                <h5 class="card-title">Lorem</h5>
+                <a href="#" class="btn">$PRECIO</a>
+              </div>
             </div>
-          </div>
 
-          <div class="card col-4 col-sm-6 col-md-4 col-lg-4 col-xl-3">
-            <img
-              src="/img/intelCeleron.jpg"
-              class="card-img-top"
-              alt="intel celeron"
-            />
-            <div class="card-body mx-0 p-0">
-              <h5 class="card-title">Lorem</h5>
-              <a href="#" class="btn">$PRECIO</a>
+            <div class="card col-4 col-sm-6 col-md-4 col-lg-4 col-xl-3">
+              <img
+                src="/img/intelCeleron.jpg"
+                class="card-img-top"
+                alt="intel celeron"
+              />
+              <div class="card-body mx-0 p-0">
+                <h5 class="card-title">Lorem</h5>
+                <a href="#" class="btn">$PRECIO</a>
+              </div>
             </div>
-          </div>
+          
         </div>
       </div>
     </div>
